[project]
name = "pr231"
version = "1.0.0"
description = ""
authors = []
license = "MIT"
dependencies = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-gen-files"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
